fix to prevent horizontal scroll in list with code examples

--- a/helpserver/assets/theme.css
+++ b/helpserver/assets/theme.css
@@ -1335,7 +1335,7 @@ dt.noMethods {
 
 .definitionTable {
     display: grid;
-    grid-template-columns: min-content auto;
+    grid-template-columns: min-content minmax(200px,auto);
 }
 
 .definitionTable > * {
